samples/_failures_safe/1761263330_c01ed2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2773c22d.c: In function ‘main’:
./samples/SAFE/__tmp_2773c22d.c:160:13: error: expected ‘;’ at end of input
  160 |     add_edge
      |             ^
      |             ;
./samples/SAFE/__tmp_2773c22d.c:160:5: error: expected declaration or statement at end of input
  160 |     add_edge
      |     ^~~~~~~~
